feat: parse headers & refactor parsing of request line

--- a/src/htdocs/default/index.html
+++ b/src/htdocs/default/index.html
@@ -47,9 +47,9 @@
     <p>
       Eine JavaScript-Datei. Hier sollte sich ein JavaScript-Popup &ouml;ffnen.<br />
       <a href="javascript:test();">Klick f&uuml;r den Test</a>
-      <script>
-        test();
-      </script>
+      <!--<script>
+        test(); This is sh*t XD
+      </script>-->
     </p>
   </body>
 </html>
